feat: Update packages and tests